objects/BCIdentity__x.object
<CustomObject>
    <description>BCIdentity</description>
    <externalDataSource>BCIdentity</externalDataSource>
    <externalName>BCIdentity</externalName>
    <fields>
        <fullName>BCName__c</fullName>
        <externalDeveloperName>name</externalDeveloperName>
        <label>BCName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>class__c</fullName>
        <description>class</description>
        <externalDeveloperName>class</externalDeveloperName>
        <label>class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>createdDate</description>
        <externalDeveloperName>createdDate</externalDeveloperName>
        <label>createdDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>description</description>
        <externalDeveloperName>description</externalDeveloperName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>identityId__c</fullName>
        <description>identityId</description>
        <externalDeveloperName>identityId</externalDeveloperName>
        <label>identityId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modifiedDate__c</fullName>
        <description>modifiedDate</description>
        <externalDeveloperName>modifiedDate</externalDeveloperName>
        <label>modifiedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>participant__c</fullName>
        <description>participant</description>
        <externalDeveloperName>participant</externalDeveloperName>
        <label>participant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>selfLink__c</fullName>
        <description>selfLink</description>
        <externalDeveloperName>selfLink</externalDeveloperName>
        <label>selfLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <description>state</description>
        <externalDeveloperName>state</externalDeveloperName>
        <label>state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BCIdentity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>identityId__c</columns>
        <columns>BCName__c</columns>
        <columns>participant__c</columns>
        <columns>ExternalId</columns>
        <columns>class__c</columns>
        <columns>state__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>BCIdentity</pluralLabel>
</CustomObject>